--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,4 @@
-Django
+Django>=5.0
 djangorestframework
 django-cors-headers
 Pillow
@@ -6,4 +6,5 @@ openai
 channels
 daphne
 requests>=2.31.0
+python-decouple>=3.8
 python-dotenv
