--- a/.gitignore
+++ b/.gitignore
@@ -1,11 +1,14 @@
-# Python
-*.py[cod]
+
+# Python cache/build artifacts
 __pycache__/
-*.so
-*.egg
-*.egg-info/
-dist/
+*.py[cod]
+*.pyo
+*.pyd
 build/
+dist/
+*.egg-info/
+*.egg
+*.so
 
 # Virtual Environment
 venv/
@@ -18,13 +21,28 @@ ENV/
 db.sqlite3
 media/
 staticfiles/
+static_root/
+.collected_static/
 
-# Environment variables
+# Environment and local settings
 .env
+.env.*
+*.env
+*.local
+*.secret
+
+# Test/coverage
+.pytest_cache/
+.coverage
+htmlcov/
+.tox/
+.mypy_cache/
+.cache/
 
 # IDE
 .vscode/
 .idea/
+*.iml
 *.swp
 *.swo
 *~
@@ -32,3 +50,9 @@ staticfiles/
 # OS
 .DS_Store
 Thumbs.db
+
+# Node (if any frontend bits)
+node_modules/
+npm-debug.log*
+yarn.lock
+pnpm-lock.yaml
