--- a/.env.example
+++ b/.env.example
@@ -9,3 +9,7 @@ ALLOWED_HOSTS=localhost,127.0.0.1
 # OpenAI API Key (Required for AI conversational interviews)
 # Get your API key from https://platform.openai.com/api-keys
 OPENAI_API_KEY=your-openai-api-key-here
+OPENAI_REALTIME_MODEL=gpt-4o-realtime-preview
+OPENAI_REALTIME_VOICE=verse
+TRANSCRIBE_MODEL=gpt-4o-mini-transcribe
+OPENAI_BASE_URL=https://api.openai.com
