fix(interviews): secure responses routing and post-submit nav; template if fix; Postgres-only runtime; CI with Postgres; remove ERD; docs/deps cleanup

--- a/.env.example
+++ b/.env.example
@@ -3,8 +3,13 @@ SECRET_KEY=django-insecure-change-this-in-production-key-12345678
 DEBUG=True
 ALLOWED_HOSTS=localhost,127.0.0.1
 
-# Database (SQLite by default)
-# No additional config needed for SQLite
+# Database (PostgreSQL)
+POSTGRES_DB=Hire_Me
+POSTGRES_USER=postgres
+POSTGRES_PASSWORD=your-secure-password
+POSTGRES_HOST=127.0.0.1
+POSTGRES_PORT=5432
+POSTGRES_CONN_MAX_AGE=60
 
 # OpenAI API Key (Required for AI conversational interviews)
 # Get your API key from https://platform.openai.com/api-keys
